# python-benchmark

./: Darwin-CPython-3.10.3.html  Darwin-CPython-3.10.4.html  Darwin-CPython-3.11.0b1.html  Darwin-CPython-3.7.12.html  Darwin-CPython-3.7.13.html  Darwin-CPython-3.8.12.html  Darwin-CPython-3.9.10.html  Darwin-CPython-3.9.11.html  Darwin-CPython-3.9.12.html  Darwin-CPython-3.9.13.html  Darwin-PyPy-3.7.12.html  Darwin-PyPy-3.7.13.html  Darwin-PyPy-3.8.12.html  Darwin-PyPy-3.8.13.html  Darwin-PyPy-3.9.10.html  Darwin-PyPy-3.9.12.html  LICENSE.txt  Linux-CPython-3.10.2.html  Linux-CPython-3.10.4.html  Linux-CPython-3.11.0b1.html  Linux-CPython-3.7.12.html  Linux-CPython-3.7.13.html  Linux-CPython-3.8.12.html  Linux-CPython-3.9.10.html  Linux-CPython-3.9.12.html  Linux-PyPy-3.7.12.html  Linux-PyPy-3.7.13.html  Linux-PyPy-3.8.12.html  Linux-PyPy-3.8.13.html  README.md  Windows-CPython-3.10.2.html  Windows-CPython-3.10.4.html  Windows-CPython-3.11.0b1.html  Windows-CPython-3.7.9.html  Windows-CPython-3.8.10.html  Windows-CPython-3.9.10.html  Windows-CPython-3.9.12.html  Windows-CPython-3.9.13.html  Windows-PyPy-3.7.12.html  Windows-PyPy-3.7.13.html  (+6 more)
.github/workflows/: benchmark.yml
python_benchmark/: bench_reporter.py
python_benchmark/templates/: index.html.jinja2  report.html.jinja2
tests/: conftest.py  test_call.py  test_class_init.py  test_dict.py  test_filter_comprehension.py  test_lookups.py  test_set_access.py  test_set_operations.py  test_set_union.py  test_slice_string.py  test_tuple_creation.py  utils.py
