[project]
name = "python-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs>=24.3.0",
    "cattrs>=24.1.2",
    "jinja2>=3.1.4",
    "markdown-it-py>=3.0.0",
    "pytest-benchmark>=5.1.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]
